# gh-py

./: .gitignore  LICENSE  README.md  gh-py  pyproject.toml  test  test.py
.github/workflows/: ci.yaml
gh_py/: __init__.py  cli.py  exceptions.py  repository.py
gh_py/internal/: exe_runner.py  gh.py  git.py
gh_py/scaffolding/: .gitignore  extension.py  pyproject.toml  scaffolding
tests/: test_cli.py  test_exec.py  test_repository.py
