[tool.poetry]
name = "gh-py"
version = "0.1.0"
description = ""
authors = ["JessicaTegner <jessica.tegner@outlook.com>"]
readme = "README.md"
packages = [{include = "gh_py"}]

[tool.poetry.dependencies]
python = "^3.7"
cleo = {version = "^1.0.0a", allow-prereleases = true}

[tool.poetry.scripts]
gh-py = 'gh_py.cli:run'

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
