[tool.poetry]
name = "gh-py"
version = "1.0.0"
description = "Write GH Extensions with Python"
authors = ["JessicaTegner <jessica.tegner@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gh_py"}]
repository = "https://github.com/JessicaTegner/gh-py"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'Operating System :: OS Independent',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

[tool.poetry.dependencies]
python = "^3.7"
cleo = {version = "^1.0.0a", allow-prereleases = true}

[tool.poetry.scripts]
gh-py = 'gh_py.cli:run'

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/JessicaTegner/gh-py/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
