[tool.poetry]
name = "My GH Extension"
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = {version = "^1.0.0a", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
